# shuku-starship

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  package.json  paofu.yaml  pnpm-lock.yaml  skills-lock.json
apps/api-python/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api-python/alembic/: env.py
apps/api-python/app/: __init__.py  main.py
apps/api-python/app/api/: router.py
apps/api-python/app/api/routes/: auth.py  compat.py  health.py
apps/api-python/app/core/: auth.py  config.py
apps/api-python/app/db/: bootstrap.py  schema.sql
apps/api-python/app/models/: auth.py  settings.py
apps/api-python/app/schemas/: responses.py
apps/api-python/app/services/: backup_scheduler.py  backup_service.py  download_executor.py  download_queue.py  health.py  organize_service.py  source_providers.py  zlibrary_eapi.py
apps/api-python/app/worker/: __init__.py  importer.py  main.py  path_security.py  watcher.py
apps/api-python/tests/: conftest.py  test_auth.py  test_backup_scheduler.py  test_compat_api.py  test_health.py  test_route_coverage.py  test_worker_importer.py
docs/: DEPLOYMENT.md  ios-pwa-debug.md  manual-acceptance.md  python-backend-migration.md
patches/: epubjs@0.3.93.patch
scripts/: acceptance-check.mjs  backfill-epub-toc.ts  dev-test.sh  e2e-flow-check.mjs  publish-docker-hub.sh  python-api-runtime-smoke.mjs  python-worker-runtime-smoke.mjs  python_backend_sample_smoke.py  python_worker_import_smoke.py  seed.mjs  (+4 more)
(+228 files in other folders)
